--- a/custom_components/cfr/manifest.json
+++ b/custom_components/cfr/manifest.json
@@ -2,7 +2,7 @@
   "domain": "cfr",
   "name": "CFR (Centro Funzionale Regione Toscana)",
   "config_flow": false,
-  "documentation": "https://www.home-assistant.io/integrations/cfr",
+  "documentation": "https://github.com/shogunxam/Home-Assistant-custom-components-cfr-toscana",
   "requirements": [],
   "ssdp": {},
   "homekit": {},
