--- a/custom_components/cfr/manifest.json
+++ b/custom_components/cfr/manifest.json
@@ -3,6 +3,7 @@
   "name": "CFR (Centro Funzionale Regione Toscana)",
   "config_flow": false,
   "documentation": "https://github.com/shogunxam/Home-Assistant-custom-components-cfr-toscana",
+  "version":"0.7.0",
   "requirements": [],
   "ssdp": {},
   "homekit": {},
